# web-img-scraper

./: .gitignore  README.md  pyproject.toml
src/website_image_scraper/: bg-remover.py  scraper.py
